--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
+    "react-helmet": "^2.3.1",
     "react-komposer": "^1.3.1",
     "react-router": "^2.0.0",
     "temp": "^0.8.3",
