--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-helmet": "^2.3.1",
     "react-komposer": "^1.3.1",
     "react-router": "^2.0.0",
+    "react-router-bootstrap": "^0.20.1",
     "temp": "^0.8.3",
     "toastr": "^2.1.2",
     "xml2js": "^0.4.16"
