--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
+    "ally.js": "^1.1.0",
     "jquery": "^2.2.0",
     "jszip": "^2.5.0",
     "mime": "^1.3.4",
     "newforms": "^0.13.2",
     "newforms-bootstrap": "^2.0.0",
+    "rangy": "^1.3.0",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
