--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ally.js": "^1.1.0",
     "jquery": "^2.2.0",
     "jszip": "^2.5.0",
+    "mantra-core": "^1.3.0",
     "mime": "^1.3.4",
     "newforms": "^0.13.2",
     "newforms-bootstrap": "^2.0.0",
@@ -14,7 +15,6 @@
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
-    "react-komposer": "^1.3.1",
     "react-router": "^2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "temp": "^0.8.3",
