--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "version": "0.0.1",
   "dependencies": {
     "ally.js": "^1.1.0",
-    "jquery": "^2.2.4",
+    "bluebird": "^3.4.1",
+    "jquery": "^3.1.0",
     "jszip": "^2.5.0",
-    "mantra-core": "^1.6.1",
     "mime": "^1.3.4",
     "newforms": "^0.13.2",
     "newforms-bootstrap": "^2.0.0",
     "rangy": "^1.3.0",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.29.4",
-    "react-dom": "^15.1.0",
+    "react": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.2.1",
     "react-helmet": "^3.1.0",
-    "react-router": "^2.4.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
     "react-router-bootstrap": "^0.23.0",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.10.1",
+    "redux-promise": "^0.5.3",
     "temp": "^0.8.3",
     "toastr": "^2.1.2",
-    "xml2js": "^0.4.16"
+    "xml2js": "^0.4.17"
   }
 }
